<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.github.mxmlc.meuestoque.AddItemActivity">

    <Button android:id="@+id/scan_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_barcode"
        android:onClick="callBarcodeScanner"
        ></Button>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_item_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_item_desc"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_manufacture_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_manufacture_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_item_manufacture_date"
            android:focusable="false"
            android:onClick="showDatePickerDialog"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_valid_thru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_valid_thru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_item_valid_thru"
            android:focusable="false"
            android:onClick="showDatePickerDialog"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_item_quantity"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_item_decrement"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="-"
                android:onClick="decrement"/>
            <TextView
                android:id="@+id/text_item_quantity"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="0"/>
            <Button
                android:id="@+id/button_item_increment"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="+"
                android:onClick="increment"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_item"
        android:onClick="addItem"/>

</LinearLayout>
